force-app/main/default/objects/dfsle__RecipientStatus__c/fields/dfsle__Contact__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to connect recipient status record with source Contact</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>DocuSign Recipient Status</relationshipLabel>
    <relationshipName>DocuSign_Recipient_Status</relationshipName>
    <type>Lookup</type>
</CustomField>