force-app/main/default/objects/dfsle__RecipientStatus__c/fields/dfsle__Email__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>