force-app/main/default/objects/dfsle__RecipientStatus__c/fields/dfsle__Lead__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field to connect recipient status record with source Lead</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>DocuSign Recipient Status</relationshipLabel>
    <relationshipName>DocuSign_Recipient_Status</relationshipName>
    <type>Lookup</type>
</CustomField>