force-app/main/default/objects/dfsle__RecipientStatus__c/fields/dfsle__Reason__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Reason__c</fullName>
    <label>Declined Reason</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>