force-app/main/default/objects/dfsle__RecipientStatus__c/fields/dfsle__Sequence__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Sequence__c</fullName>
    <externalId>true</externalId>
    <label>Sequence</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>