force-app/main/default/objects/dfsle__RecipientStatus__c/fields/dfsle__Status__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Status__c</fullName>
    <label>Status</label>
    <length>56</length>
    <type>Text</type>
</CustomField>