force-app/main/default/objects/dfsle__RecipientStatus__c/fields/dfsle__Type__c.field-meta.xml
<CustomField>
    <fullName>dfsle__Type__c</fullName>
    <label>Type</label>
    <length>56</length>
    <type>Text</type>
</CustomField>